Grace/tests/gibbs/errors/t255.grace
// ERROR = P1029
if((6 * 9) == 42)
    print "So long and thanks for all the fish"
}
